Add plugin support
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,61 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Crew DB | Medlemsportal</title>
-    <link rel="stylesheet" href="{{ static_url('css/bulma.min.css') }}">
-</head>
-
-<body>
-    <div class="container is-fluid">
-        <div class="columns">
-            <div class="column is-one-quarter ">
-                <aside class="menu">
-                    <p class="menu-label">
-                        General
-                    </p>
-                    <ul class="menu-list">
-                        <li><a>Dashboard</a></li>
-                        <li><a>Events</a></li>
-                    </ul>
-                    <p class="menu-label">
-                        Administration
-                    </p>
-                    <ul class="menu-list">
-                        <li><a>Account settings</a></li>
-                        <li>
-                            <a class="is-active">Manage Your Organizations</a>
-                            <ul>
-                                <li><a>Members</a></li>
-                                <li><a>Plugins</a></li>
-                                <li><a>Add a member</a></li>
-                            </ul>
-                        </li>
-                        <li><a>Crew DB Settings</a></li>
-                    </ul>
-                    <p class="menu-label">
-                        Transactions
-                    </p>
-                    <ul class="menu-list">
-                        <li><a>Payments</a></li>
-                        <li><a>Transfers</a></li>
-                        <li><a>Balance</a></li>
-                    </ul>
-                </aside>
-            </div>
-            <div class="column">
-                <div class="tile is-ancestor">
-                    <div class="tile is-parent">
-                        <article class="tile is-child notification is-primary">
-                            <p class="title">{{ user.name }}</p>
-                            <p class="subtitle">{{ user.email }}</p>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
-
-</html>
+{% block content %}
+    <h1 class="title">Welcome to Crew-DB</h1>
+{% end %}
