--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% if 'title' in locals() %}
+    {% if 'title' in globals() %}
     <title>Crew DB | {{ title }}</title>
     {% else %}
     <title>Crew DB</title>
