--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                         <li>
                             <a>Manage Your Organizations</a>
                             <ul>
-                                <li><a>Members</a></li>
+                                <li><a href="/members">Members</a></li>
                                 <li><a>Plugins</a></li>
                                 <li><a>Add a member</a></li>
                             </ul>
