Changed over to ORY authentication
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/admin/member.html
+++ b/templates/admin/member.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "../base.html" %}
 {% block head %}
 <script src="{{ static_url('js/ag-grid-community.min.noStyle.js') }}"></script>
 <link rel="stylesheet" href="{{ static_url('css/ag-grid.css') }}">
