--- a/templates/base.html
+++ b/templates/base.html
@@ -32,9 +32,9 @@
                         <li>
                             <a>Manage Your Organizations</a>
                             <ul>
-                                <li><a href="/members">Members</a></li>
+                                <li><a href="/admin/members">Members</a></li>
                                 <li><a>Plugins</a></li>
-                                <li><a>Add a member</a></li>
+                                <li><a href="/admin/add-member">Add a member</a></li>
                             </ul>
                         </li>
                         <li><a>Crew DB Settings</a></li>
