--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -40,6 +40,26 @@
                                     <input name="password" class="input is-large" type="password" placeholder="Password" />
                                 </div>
                             </div>
+                            <div class="field">
+                                <div class="control">
+                                    <input name="traits.street" class="input is-large" type="text" placeholder="Street" />
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="control">
+                                    <input name="traits.postal_code" class="input is-large" type="text" placeholder="Postal code" />
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="control">
+                                    <input name="traits.city" class="input is-large" type="text" placeholder="City" />
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="control">
+                                    <input name="traits.country" class="input is-large" type="text" placeholder="Country" />
+                                </div>
+                            </div>
                             <button type="submit" class="button is-block is-info is-large is-fullwidth">
                                 Sign up
                             </button>
