Show e-mail as verified or not
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <title>Crew DB</title>
     {% end %}
     <link rel="stylesheet" href="{{ static_url('css/bulma.min.css') }}">
+    <link rel="stylesheet" href="{{ static_url('fontawesome/css/all.min.css') }}">
     {% block head %}{% end %}
 </head>
 <body>
