Start using database for organizations
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/admin/add-member.html
+++ b/templates/admin/add-member.html
@@ -2,7 +2,7 @@
 {% block head %}
 <script src="{{ static_url('js/ag-grid-community.min.noStyle.js') }}"></script>
 <link rel="stylesheet" href="{{ static_url('css/ag-grid.css') }}">
-<link rel="stylesheet" href="{{ static_url('css/ag-theme-balham.css') }}">
+<link rel="stylesheet" href="{{ static_url('css/ag-theme-alpine.css') }}">
 {% end %}
 {% block content %}
 <h1 class="title">Add member</h1>
