Change public Kratos URL to simply: /kratos
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/base.html
+++ b/templates/base.html
@@ -111,7 +111,7 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a href="/.ory/kratos/public/self-service/browser/flows/logout" class="button is-light">
+                        <a href="/kratos/self-service/browser/flows/logout" class="button is-light">
                             Logga ut
                         </a>
                     </div>
